--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_API_page_css.css
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_API_page_css.css
@@ -29,6 +29,10 @@
   margin: 0;
 }
 
+.documentation div {
+  vertical-align: middle !important;
+}
+
 .documentation .line {
     width: 100%;
     height: 1px;
@@ -53,7 +57,6 @@
 
 .item-name span:last-of-type {
   font-style: italic; }
-
 
 .line {
   width: 100%;
