--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_css.css
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_css.css
@@ -1,19 +1,4 @@
-.import-export {
-  white-space: nowrap;
-}
-
-.import-export input {
-    display: none;
-}
-
-.import-export label {
-    border: 1px solid #ccc;
-    display: inline-block;
-    padding: 6px 12px;
-    cursor: pointer;
-}
-
-.item-label {
+div[data-gadget-url$="gadget_erp5_page_drone_capture_flag_script_page.html"] .item-label {
   background-color: #F8F8F8;
   padding: 8px;
   margin: 8px 0;
@@ -21,6 +6,18 @@
   font-weight: bold;
 }
 
-.run-game {
-  margin-top: 0 !important;
+div[data-gadget-url$="gadget_erp5_page_drone_capture_flag_script_page.html"] button {
+  color: #212529;
+  padding: 3pt;
+  border: 1px solid rgba(0, 0, 0, 0.14);
+  border-radius: 0.325em;
+  display: inline-block;
+  margin-right: 6pt;
+}
+div[data-gadget-url$="gadget_erp5_page_drone_capture_flag_script_page.html"] button:disabled,
+div[data-gadget-url$="gadget_erp5_page_drone_capture_flag_script_page.html"] button[disabled] {
+  color: #999999;
+}
+div[data-gadget-url$="gadget_erp5_page_drone_capture_flag_script_page.html"] button:before {
+  padding-right: 0.2em;
 }
