erp5_web_monitoring: refactor how app handles data - app does not manipulate data structure anymore (jio does) - use union storage for multiple masters - remote slapos masters fetch is done in replicateopml storage repair method - sync repair method recreates the storage on new master urls, and updates the stored objects accordingly - add erp5monitor layer in monitoring jio storage

--- a/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_custom_css.css
+++ b/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_custom_css.css
@@ -371,3 +371,8 @@ margin-top: 5px;
   margin: 30px 25px 10px 0;
   border-top: 1px solid #dedede;
 }
+
+
+div[data-gadget-scope$="output_message"] p {
+  margin: 0;
+}
